# calidad-software-expo-1

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini
keys/: private.pem  public.pem
src/application/: exceptions.py
src/application/adapters/role_handler/: role_service.py
src/application/adapters/user_handler/: user_service.py
src/application/mappers/: user_mapper.py
src/config/: dependencies.py  logging.py  settings.py
src/domain/: exceptions.py
src/domain/DTOs/: role_dto.py  user_dto.py
src/domain/entities/: user_entity.py
src/domain/ports/application/: role_service.py  user_service.py
src/domain/ports/infrastructure/persistence/: mongo_repository.py
src/domain/value_objects/: role_permissions.py
src/infrastructure/: exceptions.py
src/infrastructure/adapters/persistence/mongodb/: mappers.py  mongo_repository.py  mongo_schema.py
src/presentation/http/: errors.py  main.py
src/presentation/http/routes/: health_routes.py  role_routes.py  user_routes.py
tests/unit/complex/: test_mongo_mappers.py  test_mongo_repository.py  test_role_service.py  test_user_service.py
tests/unit/simple/: test_dtos.py  test_exceptions.py  test_mongo_mappers.py  test_user_mapper.py
